--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@sanity/client": "^3.2.0",
+        "@sanity/image-url": "^1.0.1",
         "@testing-library/jest-dom": "^5.16.2",
         "@testing-library/react": "^12.1.3",
         "@testing-library/user-event": "^13.5.0",
         "nodemon": "^2.0.15",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-google-login": "^5.2.2",
+        "react-icons": "^4.3.1",
+        "react-loader-spinner": "^6.0.0-0",
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
         "react-scroll": "^1.8.6",
