--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@fortawesome/free-solid-svg-icons": "^6.0.0",
+        "@fortawesome/react-fontawesome": "^0.1.17",
         "@sanity/client": "^3.2.0",
         "@sanity/image-url": "^1.0.1",
         "@testing-library/jest-dom": "^5.16.2",
@@ -17,6 +19,7 @@
         "react-router-dom": "^6.2.2",
         "react-scripts": "5.0.0",
         "react-scroll": "^1.8.6",
+        "uuidv4": "^6.2.12",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
